# cmake-templates

./: README.md
docs/superpowers/plans/: 2026-05-22-cmake-templates.md  2026-05-23-cmake-templates.md
docs/superpowers/specs/: 2026-05-22-cmake-templates-design.md  2026-05-23-cmake-templates-design.md
project/: CMakeLists.txt  CMakePresets.json  vcpkg.json
project/.github/workflows/: ci.yml
project/cmake/: deps.cmake
project/libs/core/: CMakeLists.txt
project/libs/core/include/core/: core.h
project/libs/core/src/: core.cpp
project/libs/utils/: CMakeLists.txt
project/libs/utils/include/utils/: utils.h
project/libs/utils/src/: utils.cpp
project/src/: main.cpp
project/tests/: CMakeLists.txt  test_main.cpp
scratch/: .gitignore  CMakeLists.txt  example1.cpp  example2.cpp
tutorials/01-hello/: CMakeLists.txt
tutorials/02-with-lib/: CMakeLists.txt
tutorials/02-with-lib/libs/mylib/: CMakeLists.txt
tutorials/02-with-lib/src/: main.cpp
tutorials/03-with-deps/: .gitignore  CMakeLists.txt  CMakePresets.json
tutorials/03-with-deps/cmake/: deps.cmake
tutorials/03-with-deps/src/: main.cpp
